apps/enqueuer/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enqueuer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: enqueuer
  template:
    metadata:
      labels:
        app: enqueuer
    spec:
      containers:
        - name: enqueuer
          image: registry.fullstack.pw/enqueuer:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
