apps/enqueuer/kustomize/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: enqueuer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enqueuer
  template:
    metadata:
      labels:
        app: enqueuer
      annotations:
        rollout-restart: "2026-01-14-06-33"
    spec:
      containers:
        - name: enqueuer
          image: registry.fullstack.pw/library/enqueuer:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
  strategy:
    blueGreen:
      activeService: enqueuer
      previewService: enqueuer-preview
      autoPromotionEnabled: false
      scaleDownDelaySeconds: 30
      prePromotionAnalysis:
        templates:
          - templateName: cypress-tests
        args:
          - name: app-name
            value: enqueuer
          - name: app-url
            value: "https://dev.enqueuer.fullstack.pw"
          - name: environment
            value: "dev"
      postPromotionAnalysis:
        templates:
          - templateName: promote-to-prod
        args:
          - name: app-name
            value: enqueuer
