apps/enqueuer/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enqueuer
spec:
  selector:
    app: enqueuer
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
