apps/enqueuer/kustomize/base/ingress.yaml
# manifests/enqueuer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: enqueuer
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    external-dns.alpha.kubernetes.io/hostname: "enqueuer.fullstack.pw"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "enqueuer.fullstack.pw"
      secretName: enqueuer-tls
  rules:
    - host: "enqueuer.fullstack.pw"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: enqueuer
                port:
                  number: 80
