apps/enqueuer/kustomize/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: enqueuer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  hosts:
    - "dev.enqueuer.fullstack.pw"
  gateways:
    - istio-system/default-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: enqueuer.default.svc.cluster.local
            port:
              number: 80
